src/test/fail/break_outside_loop.ly
###
SyntaxError: 'break' used outside of a loop.
Where: File "test/fail/break_outside_loop.ly" at line 6
###

break
